--- a/app/index.html
+++ b/app/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <button type='button' id='btn-add-task' class='btn btn-med'>Add Task</button>
   </body>
 </html>
