added SASS and Primer

--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,12 @@
     <meta charset='utf-8'>
     <title>RMS and EDF Visualizations</title>
     <script src='main.js'></script>
+    <link rel='stylesheet' type='text/css' href='css/main.css'>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <button type='button' id='btn-add-task' class='btn btn-med'>Add Task</button>
+    <div class='container'>
+      <h1>Hello World</h1>
+      <button role='button' type='button' id='btn-add-task' class='btn btn-primary'>Add Task</button>
+    </div>
   </body>
 </html>
