--- a/source/index.html
+++ b/source/index.html
@@ -3,13 +3,33 @@
   <head>
     <meta charset='utf-8'>
     <title>RMS and EDF Visualizations</title>
-    <script src='main.js'></script>
     <link rel='stylesheet' type='text/css' href='css/main.css'>
   </head>
   <body>
     <div class='container'>
       <h1>Hello World</h1>
-      <button role='button' type='button' id='btn-add-task' class='btn btn-primary'>Add Task</button>
+      <form>
+        <dl class='form'>
+          <dt><label for='add-task-start'>Start Time</label></dt>
+          <dt><input type='text' id='add-task-start'></dt>
+          <dd class='error'>Start Time must be a positive integer</dd>
+        </dl>
+
+        <dl class='form'>
+          <dt><label for='add-task-period'>Period</label></dt>
+          <dt><input type='text' id='add-task-period'></dt>
+          <dd class='error'>Period must be a positive integer</dd>
+        </dl>
+
+        <dl class='form'>
+          <dt><label for='add-task-start'>Duration</label></dt>
+          <dt><input type='text' id='add-task-duration'></dt>
+          <dd class='error'>Duration must be a positive integer</dd>
+        </dl>
+
+        <button role='button' type='button' id='btn-add-task' class='btn btn-primary'>Add Task</button>
+      </form>
     </div>
+    <script src='main.js'></script>
   </body>
 </html>
