added event emitter to task set

--- a/source/index.html
+++ b/source/index.html
@@ -29,6 +29,20 @@
 
         <button role='button' type='button' id='btn-add-task' class='btn btn-primary'>Add Task</button>
       </form>
+
+      <table id='table-of-tasks'>
+        <thead>
+          <tr>
+            <th scope='col'>Task ID</th>
+            <th scope='col'>Start Time</th>
+            <th scope='col'>Period</th>
+            <th scope='col'>Duration</th>
+            <th scope='col'>Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
     </div>
     <script src='main.js'></script>
   </body>
