--- a/source/index.html
+++ b/source/index.html
@@ -8,41 +8,46 @@
   <body>
     <div class='container'>
       <h1>Hello World</h1>
-      <form>
-        <dl class='form'>
-          <dt><label for='add-task-start'>Start Time</label></dt>
-          <dt><input type='text' id='add-task-start'></dt>
-          <dd class='error'>Start Time must be a positive integer</dd>
-        </dl>
+      <div class='columns'>
+        <div class='one-fourth column'>
+          <form>
+            <dl class='form'>
+              <dt><label for='add-task-start'>Start Time</label></dt>
+              <dt><input type='text' id='add-task-start'></dt>
+              <dd class='error'>Start Time must be a positive integer</dd>
+            </dl>
 
-        <dl class='form'>
-          <dt><label for='add-task-period'>Period</label></dt>
-          <dt><input type='text' id='add-task-period'></dt>
-          <dd class='error'>Period must be a non-zero positive integer</dd>
-        </dl>
+            <dl class='form'>
+              <dt><label for='add-task-period'>Period</label></dt>
+              <dt><input type='text' id='add-task-period'></dt>
+              <dd class='error'>Period must be a non-zero positive integer</dd>
+            </dl>
 
-        <dl class='form'>
-          <dt><label for='add-task-start'>Duration</label></dt>
-          <dt><input type='text' id='add-task-duration'></dt>
-          <dd class='error'>Duration must be a non-zero positive integer</dd>
-        </dl>
+            <dl class='form'>
+              <dt><label for='add-task-start'>Duration</label></dt>
+              <dt><input type='text' id='add-task-duration'></dt>
+              <dd class='error'>Duration must be a non-zero positive integer</dd>
+            </dl>
 
-        <button role='button' type='button' id='btn-add-task' class='btn btn-primary'>Add Task</button>
-      </form>
-
-      <table class='table' id='table-of-tasks'>
-        <thead>
-          <tr>
-            <th scope='col'>Task ID</th>
-            <th scope='col'>Start Time</th>
-            <th scope='col'>Period</th>
-            <th scope='col'>Duration</th>
-            <th scope='col'>Delete</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
+            <button role='button' type='button' id='btn-add-task' class='btn btn-primary'>Add Task</button>
+          </form>
+        </div>
+        <div class='three-fourths column'>
+          <table class='tasktable' id='table-of-tasks'>
+            <thead>
+              <tr>
+                <th scope='col'>Task ID</th>
+                <th scope='col'>Start Time</th>
+                <th scope='col'>Period</th>
+                <th scope='col'>Duration</th>
+                <th scope='col'>Delete</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
     <script src='main.js'></script>
   </body>
