--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div class='container'>
-      <h1>Hello World</h1>
+      <h1>Schedule Visualizer</h1>
+      <p class='lead'>Visualizations for Rate-Monotonic Scheduling (RMS) and Earliest Deadline First (EDF) scheduling algorithms.</p>
       <div class='columns'>
         <div class='one-fourth column'>
           <form>
