removed some printlns

--- a/source/index.html
+++ b/source/index.html
@@ -43,6 +43,8 @@
           </table>
         </div>
       </div>
+      <div id='schedule-rms' class='schedule-container'>
+      </div>
     </div>
     <script src='main.js'></script>
   </body>
