added EDF visualization

--- a/source/index.html
+++ b/source/index.html
@@ -48,6 +48,11 @@
         <div class='vis-task-container'></div>
         <div class='vis-time-container'></div>
       </div>
+      <h3>EDF Schedule</h3>
+      <div id='schedule-edf' class='vis-container'>
+        <div class='vis-task-container'></div>
+        <div class='vis-time-container'></div>
+      </div>
     </div>
     <script src='main.js'></script>
   </body>
