--- a/source/index.html
+++ b/source/index.html
@@ -43,6 +43,7 @@
           </table>
         </div>
       </div>
+      <h3>Task Set Utilization: <span id='set-utilization'><span></h3>
       <h3>RMS Schedule</h3>
       <div id='schedule-rms' class='vis-container'>
         <div class='vis-task-container'></div>
