--- a/source/index.html
+++ b/source/index.html
@@ -29,6 +29,7 @@
           </form>
         </div>
         <div class='three-fourths column'>
+          <h3>Task Set (Utilization: <span id='set-utilization'></span>)</h3>
           <table class='tasktable' id='table-of-tasks'>
             <thead>
               <tr>
@@ -43,7 +44,6 @@
           </table>
         </div>
       </div>
-      <h3>Task Set Utilization: <span id='set-utilization'><span></h3>
       <h3>RMS Schedule</h3>
       <div id='schedule-rms' class='vis-container'>
         <div class='vis-task-container'></div>
