added error message when checks fail

--- a/source/index.html
+++ b/source/index.html
@@ -45,11 +45,17 @@
         </div>
       </div>
       <h3>RMS Schedule</h3>
+      <div id='error-rms' hidden>
+        <p>This task set failed the RMS schedulability check</p>
+      </div>
       <div id='schedule-rms' class='vis-container'>
         <div class='vis-task-container'></div>
         <div class='vis-time-container'></div>
       </div>
       <h3>EDF Schedule</h3>
+      <div id='error-edf' hidden>
+        <p>This task set failed the EDF schedulability check</p>
+      </div>
       <div id='schedule-edf' class='vis-container'>
         <div class='vis-task-container'></div>
         <div class='vis-time-container'></div>
